--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,8 @@
 <IfModule mod_rewrite.c>
-RewriteEngine On
-RewriteCond %{HTTP_HOST} ^fightcompanions.com [NC]
-RewriteRule ^(.*)$ http://www.fightcompanions.com/$1 [L,R=301,NC]
+RewriteEngine on
+#RewriteCond %{HTTP_HOST} ^fightcompanions.com [NC]
+#RewriteRule ^(.*)$ http://www.fightcompanions.com/$1 [L,R=301,NC]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ index.php/$1 [L]
+RewriteRule .* index.php/$0 [PT,L]
 </IfModule>
